cabal-version:      3.0
name:               mpdb
version:            0.1.0.0

category:           Compilers/Interpreters
synopsis:           A tool to assist in debugging C++ metaprograms.
description:        A tool to assist debugging C++ metaprograms;
                    that is, programs that are evaluated at compile time.

license:            MIT
license-file:       LICENSE.txt

author:             Nathaniel Shead
maintainer:         natattak@gmail.com
copyright:          (c) 2021 Nathaniel Shead
extra-source-files: README.md

tested-with:        GHC == 8.10.7


source-repository head
  type:     git
  location: git://github.com/wreien/mpdb.git


common deps
    build-depends:    base ^>=4.14.3.0
                    , text ^>=1.2.5
                    , megaparsec >=9.2 && <10.0

    default-language: Haskell2010
    ghc-options:      -Wall


library
    import:           deps

    hs-source-dirs:   src

    exposed-modules:  
        Lexer,
        Locations,
        PPToken,
    other-modules:
    other-extensions:

    build-depends:    text-icu ^>=0.7
                    , mtl ^>=2.2.2
                    , containers ^>=0.6.5
                    , unordered-containers ^>=0.2.11
                    , vector ^>=0.12.3
                    , prettyprinter ^>=1.7
                    , microlens ^>=0.4.12
                    , microlens-th ^>=0.4.3
                    , with-utf8 ^>=1.0


executable mpdb
    import:           deps

    hs-source-dirs:   app

    main-is:          Main.hs
    other-modules:

    build-depends:    mpdb
                    , prettyprinter ^>=1.7
                    , with-utf8 ^>=1.0


test-suite mpdb-test
    import:           deps

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test

    main-is:          Spec.hs
    other-modules:    LexerSpec

    build-depends:    mpdb
                    , hspec >=2.8 && <3.0
                    , hspec-megaparsec ^>=2.2
